# dataRPG

./: .gitignore  LICENSE  README.md  pyproject.toml
attrify/: __init__.py  core.py  engines.py  utils.py
datarpg/: core.py  engines.py  utils.py
templates/: enemies.yaml
tests/: test_core.py  test_utils.py
