[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attrify"
version = "0.0.1"
authors = [{ name = "Felipe Cardoso", email = "pcardoso.felipe@gmail.com" }]
description = "A lightweight RPG attribute and modifier management library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/felCardoso/attrify"
"Bug Tracker" = "https://github.com/felCardoso/attrify/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
