[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attrify"
version = "0.1.0"
description = "A data-driven attribute management system for RPGs"
readme = "README.md"
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
toml = ["toml>=0.10.2"]
all = ["PyYAML>=6.0", "toml>=0.10.2"]

[project.urls]
"Homepage" = "https://github.com/felCardoso/attrify"
"Bug Tracker" = "https://github.com/felCardoso/attrify/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
